# Tugas-Akhir

Robot 2/src/fardli_dwa/: package.xml  setup.py
Robot 2/src/fardli_dwa/fardli_dwa/: follower.py  follower3state.py  followerskenario2.py  global_path.py  globalpathskenario2.py  simple_dwa_node.py
Robot 2/src/scan_timestamp_fixer/scan_timestamp_fixer/: fix_scan_timestamp.py
Robot 2/src/yahboom_app_save_map/yahboom_app_save_map/: yahboom_app_save_map.py
Robot 2/src/yahboomcar_astra/opencv_examples/: 1_2.py
Robot 2/src/yahboomcar_astra/yahboomcar_imshow/: setup.py
Robot 2/src/yahboomcar_autonomous/: CMakeLists.txt
Robot 2/src/yahboomcar_base_node/src/: base_node.cpp
Robot 2/src/yahboomcar_bringup/launch/: yahboomcar_bringup_launch.py
Robot 2/src/yahboomcar_bringup/yahboomcar_bringup/: Mcnamu_driver.py
Robot 2/src/yahboomcar_csi_cam_py/: setup.cfg
Robot 2/src/yahboomcar_multi/: setup.py
Robot 2/src/yahboomcar_nav/maps/: Demo.pgm  (+1 more)
Robot 3/: README.md
Robot 3/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
Robot 3/log/: latest_build
Robot 3/src/fardli_dwa/: setup.cfg  setup.py
Robot 3/src/mipi_camera_simple/: QUICKSTART.md  README.md  package.xml  setup.cfg  setup.py
Robot 3/src/scan_timestamp_fixer/: package.xml  setup.cfg  setup.py
Robot 3/sunriseRobot/SunriseRobotLib/: setup.py
Robot 3/sunriseRobot/app_SunriseRobot/: app_SunriseRobot.py  close_AP.sh  close_APP.sh  joystick.py  kill_oled.sh  oled.py  open_AP.sh  start_app.sh
yahboomcar_ws/install/: local_setup.sh  setup.sh
yahboomcar_ws/log/: latest_build
(+165 files in other folders)
