<?xml version="1.0"?>
<package format="3">
  <name>fardli_dwa</name>
  <version>0.0.1</version>
  <description>
    Custom Dynamic Window Approach (DWA) local planner for mobile robot navigation
  </description>

  <maintainer email="you@example.com">Fardli</maintainer>
  <license>Apache-2.0</license>

  <!-- Build system -->
  <buildtool_depend>ament_python</buildtool_depend>

  <!-- Runtime dependencies -->
  <depend>rclpy</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>tf2_ros</depend>

  <!-- Testing (optional) -->
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
